--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   "dependencies": {
     "expo": "~54.0.13",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "2.0.11",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-dotenv": "^3.4.11"
+    "react-native-dotenv": "^3.4.11",
+    "react-native-paper": "^5.14.5",
+    "react-native-safe-area-context": "^5.6.1",
+    "react-native-vector-icons": "^10.3.0",
+    "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "@types/react-native": "^0.72.8",
+    "babel-preset-expo": "^54.0.4",
     "typescript": "~5.9.2"
   },
   "private": true
