--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "booktracker-app",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "expo": "~54.0.13",
+    "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
     "nativewind": "2.0.11",
-    "react": "19.1.0",
+    "react": "19.2.0",
     "react-native": "0.81.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
