--- a/package.json
+++ b/package.json
@@ -9,21 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~54.0.13",
+    "expo": "54.0.23",
+    "expo-constants": "~18.0.10",
+    "expo-font": "^14.0.9",
+    "expo-linking": "~8.0.8",
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
     "nativewind": "2.0.11",
-    "react": "19.2.0",
-    "react-native": "0.81.4",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "^5.6.1",
+    "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "@types/react-native": "^0.72.8",
+    "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.4",
     "typescript": "~5.9.2"
   },
