--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/portal": "^1.0.14",
+    "@react-native-async-storage/async-storage": "^2.1.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "expo": "54.0.23",
     "expo-constants": "~18.0.10",
     "expo-font": "^14.0.9",
+    "expo-image-manipulator": "~14.0.7",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "^6.0.14",
     "expo-status-bar": "~3.0.8",
@@ -20,9 +25,11 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
