--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "react-native": "0.81.5",
     "react-native-dotenv": "^3.4.11",
     "react-native-paper": "^5.14.5",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "3.3.2"
