--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "3.3.2"
@@ -40,6 +40,11 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.4",
     "typescript": "~5.9.2"
+  },
+  "overrides": {
+    "react-dom": {
+      "react": "$react"
+    }
   },
   "private": true
 }
