--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "moduleResolution": "bundler",
     "baseUrl": ".",
     "paths": {
-      "@ui/*": ["app/ui/*"],
+      "@ui/*": ["mods/ui/*"],
       "@mods/*": ["mods/*"]
     }
   },
