--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "expo": "54.0.23",
+    "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
     "expo-font": "^14.0.9",
     "expo-image-manipulator": "~14.0.7",
