--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "expo-font": "^14.0.9",
     "expo-image-manipulator": "~14.0.7",
     "expo-image-picker": "~17.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-router": "^6.0.14",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
     "expo-status-bar": "~3.0.8",
     "nativewind": "2.0.11",
     "react": "19.1.0",
